--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -1472,8 +1472,15 @@
    "source": [
     "1. The relationship between international currencies can create additional value for banks who are looking at different currencies to invest in. If they see that one remains more stable than others, it is a safer bet to place thier money in. \n",
     "\n",
-    "2. Another way these data sets can create additional value is that they can reveal patterns and reasons why a certain currency remains stable or varies drastically. If one were to look at these data sets against dates of Wars, or political dissent within the EU, England, and the United States, they would be able to more accurately predict future trends in our monetary value on a global scale. "
+    "2. Another way these data sets can create additional value is that they can reveal patterns and reasons why a certain currency remains stable or varies drastically. If one were to look at these data sets against dates of Wars, or political dissent within the EU, England, and the United States, they would be able to more accurately predict future trends in our monetary value on a global scale. \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
